Corrected ntp service to chronyd

--- a/pkg/dmaple-chrony-0.1.0/templates/chrony.conf.erb
+++ b/pkg/dmaple-chrony-0.1.0/templates/chrony.conf.erb
@@ -21,7 +21,7 @@ rtcsync
 # Specify file containing keys for NTP authentication.
 <% if @keys_enable -%>
 keysfile <%= @keys_file %>
-<% end -%>
+% end -%>
 
 # Specify directory for log files.
 <% unless @logdir.nil? -%>
